Fix some Sonar warnings.